--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="box">
         <div class="item">
             <div class="item-text">
-                <h1 class="faq" style="font-size: 40px;">F.A.Q</h1>
+                <h1 class="faq">F.A.Q</h1>
             </div>
             <div class="animation">
                 <center><lottie-player src="https://assets1.lottiefiles.com/packages/lf20_wloxwco0.json"  background="transparent"  speed="1"  style="width: 220px; margin: auto;"  loop autoplay></lottie-player></center>
@@ -27,30 +27,30 @@
             <div class="faq-class" style="margin: auto; margin-left: 20px; margin-right: 20px; max-width: 400px;">
                     <div style="margin-bottom: 15px;">
                         <a id='1' href="#">
-                            <div  style="display: flex; color: #fff; border: 1px solid rgba(170,62,166,0.719); border-radius: 10px;">
-                                <h6 id="h61" style="margin:auto; margin-left: 3px; font-size: 15px;">Как это работает?</h6>
-                                <img src="img/arrow.svg" style="width:25px; margin: auto; margin-right: 3px;"/>
+                            <div  style="display: flex; color: #fff; border-radius: 10px; background-image: linear-gradient(138deg, rgba(170,62,166,1) 0%, rgba(87,170,211,1) 100%);">
+                                <h6 id="h61" style="margin:auto; margin-left: 5px; font-size: 15px; font-family: 'Comfortaa', cursive;">Как это работает?</h6>
+                                <img src="img/arrow.svg" style="width:25px; margin: auto; margin-right: 5px;"/>
                             </div>
                         </a>
-                        <p id="11" style="display: none; font-size: 12px; font-family: 'Jost', sans-serif; letter-spacing: 2px;">Примерно так и работает.</p> 
+                        <p id="11" style="display: none; font-size: 12px; font-family: 'Comfortaa', cursive; letter-spacing: 1px;">Примерно так и работает.</p> 
                     </div>
                     <div style="margin-bottom: 15px;">
                         <a id='2' href="#">
-                            <div style="display: flex; color: #fff; border: 1px solid rgba(73, 175, 226, 0.719); border-radius: 10px;">
-                                <h6 id="h62" style="margin:auto; margin-left: 3px; font-size: 15px;">Достаточно большой вопрос?</h6>
-                                <img src="img/arrow.svg" style="width:25px; margin: auto; margin-right: 3px;"/>
+                            <div style="display: flex; color: #fff; border-radius: 10px; background-image: linear-gradient(138deg, rgba(170,62,166,1) 0%, rgba(87,170,211,1) 100%);">
+                                <h6 id="h62" style="margin:auto; margin-left: 5px; font-size: 15px; font-family: 'Comfortaa', cursive;">Достаточно большой вопрос?</h6>
+                                <img src="img/arrow.svg" style="width:25px; margin: auto; margin-right: 5px;"/>
                             </div>
                         </a>
-                        <p id="21" style="display: none; font-size: 12px; font-family: 'Jost', sans-serif; letter-spacing: 2px;">Ответ на большой вопрос.</p>
+                        <p id="21" style="display: none; font-size: 12px; font-family: 'Comfortaa', cursive; letter-spacing: 1px;">Ответ на большой вопрос.</p>
                     </div>
                     <div>
                         <a id='3' href="#">
-                            <div  style="display: flex; color: #fff; border: 1px solid rgba(59, 20, 202, 0.719); border-radius: 10px;">
-                                <h6 id="h63" style="margin:auto; margin-left: 3px; font-size: 15px;">Не такой частый вопрос?</h6>
-                                <img src="img/arrow.svg" style="width:25px; margin: auto; margin-right: 3px;"/>
+                            <div  style="display: flex; color: #fff; border-radius: 10px; background-image: linear-gradient(138deg, rgba(170,62,166,1) 0%, rgba(87,170,211,1) 100%);">
+                                <h6 id="h63" style="margin:auto; margin-left: 5px; font-size: 15px; font-family: 'Comfortaa', cursive;">Не такой частый вопрос?</h6>
+                                <img src="img/arrow.svg" style="width:25px; margin: auto; margin-right: 5px;"/>
                             </div>
                         </a>
-                        <p id="31" style="display: none; font-size: 12px; font-family: 'Jost', sans-serif; letter-spacing: 2px;">Ответ на менее частый вопрос.</p> 
+                        <p id="31" style="display: none; font-size: 12px; font-family: 'Comfortaa', cursive; letter-spacing: 1px;">Ответ на менее частый вопрос.</p> 
                     </div>
             </div>
         </div>
